fix: remove block overflow fix
fix https://github.com/pengx17/logseq-dev-theme/issues/70

--- a/src/bullet_threading.scss
+++ b/src/bullet_threading.scss
@@ -44,12 +44,6 @@
   overflow-x: visible !important; /* Fixme: overflow? */
 }
 
-.block-content-wrapper > div:first-child {
-  padding: 1px;
-  margin: -1px;
-  overflow-x: auto;
-}
-
 .bullet-container {
   height: 14px !important;
   width: 14px !important;
